# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('ftl_band.c', 'ftl_core.c', 'ftl_debug.c', 'ftl_init.c', 'ftl_io.c', 'ftl_reloc.c', 'ftl_restore.c', 'ftl_trace.c')
headers = files('ftl_addr.h', 'ftl_band.h', 'ftl_core.h', 'ftl_debug.h', 'ftl_io.h', 'ftl_reloc.h', 'ftl_trace.h')
