# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('conn.c', 'init_grp.c', 'iscsi.c', 'iscsi_rpc.c', 'iscsi_subsystem.c', 'md5.c', 'param.c', 'portal_grp.c', 'task.c', 'tgt_node.c')
headers = files('conn.h', 'init_grp.h', 'iscsi.h', 'md5.h', 'param.h', 'portal_grp.h', 'task.h', 'tgt_node.h')
