# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('nvme.c', 'nvme_ctrlr.c', 'nvme_ctrlr_cmd.c', 'nvme_ctrlr_ocssd_cmd.c', 'nvme_cuse.c', 'nvme_fabric.c', 'nvme_io_msg.c', 'nvme_ns.c', 'nvme_ns_cmd.c', 'nvme_ns_ocssd_cmd.c', 'nvme_opal.c', 'nvme_pcie.c', 'nvme_poll_group.c', 'nvme_qpair.c', 'nvme_quirks.c', 'nvme_rdma.c', 'nvme_tcp.c', 'nvme_transport.c', 'nvme_uevent.c')
headers = files('nvme_cuse.h', 'nvme_internal.h', 'nvme_io_msg.h', 'nvme_opal_internal.h', 'nvme_uevent.h')
