# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('ctrlr.c', 'ctrlr_bdev.c', 'ctrlr_discovery.c', 'fc.c', 'fc_ls.c', 'nvmf.c', 'nvmf_rpc.c', 'rdma.c', 'subsystem.c', 'tcp.c', 'transport.c')
headers = files('nvmf_fc.h', 'nvmf_internal.h', 'transport.h')
