# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('base64.c', 'bit_array.c', 'cpuset.c', 'crc16.c', 'crc32.c', 'crc32_ieee.c', 'crc32c.c', 'dif.c', 'fd.c', 'file.c', 'iov.c', 'math.c', 'pipe.c', 'strerror_tls.c', 'string.c', 'uuid.c')
headers = files('util_internal.h')
