# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

includes = [global_inc]

sources = files('bdev_nvme.c', 'bdev_nvme_cuse_rpc.c', 'bdev_nvme_rpc.c', 'bdev_ocssd.c', 'bdev_ocssd_rpc.c', 'common.c', 'nvme_rpc.c', 'vbdev_opal.c', 'vbdev_opal_rpc.c')
headers = files('bdev_nvme.h', 'bdev_ocssd.h', 'common.h', 'vbdev_opal.h')
